<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/colorPrimary"
    android:orientation="vertical">

    <TextView
        android:id="@+id/dialog_edit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_medium"
        android:fontFamily="@font/tokens_normal"
        android:padding="@dimen/padding_small"
        android:text="@string/edit"
        android:textColor="@android:color/white"
        android:textSize="@dimen/text_size_small" />

    <TextView
        android:id="@+id/dialog_delete"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_medium"
        android:fontFamily="@font/tokens_normal"
        android:padding="@dimen/padding_small"
        android:text="@string/delete"
        android:textColor="@android:color/white"
        android:textSize="@dimen/text_size_small" />

    <TextView
        android:id="@+id/dialog_share"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_medium"
        android:fontFamily="@font/tokens_normal"
        android:padding="@dimen/padding_small"
        android:text="@string/share"
        android:textColor="@android:color/white"
        android:textSize="@dimen/text_size_small" />
</LinearLayout>