<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardElevation="@dimen/card_elevation">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="@dimen/padding_small">

        <ImageView
            android:id="@+id/iv_item_camera"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:contentDescription="@string/image"
            android:padding="@dimen/padding_medium"
            android:src="@drawable/camera" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <EditText
                android:id="@+id/et_item_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin_extra_small"
                android:background="@null"
                android:cursorVisible="false"
                android:fontFamily="@font/tokens_normal"
                android:hint="@string/enter_item_name"
                android:importantForAutofill="no"
                android:inputType="text"
                android:padding="@dimen/padding_medium"
                android:textSize="@dimen/text_size_small" />

            <EditText
                android:id="@+id/et_item_piece"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin_extra_small"
                android:background="@null"
                android:cursorVisible="false"
                android:fontFamily="@font/tokens_normal"
                android:hint="@string/enter_item_piece"
                android:importantForAutofill="no"
                android:inputType="number"
                android:padding="@dimen/padding_medium"
                android:textSize="@dimen/text_size_small" />

            <EditText
                android:id="@+id/et_item_location"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin_extra_small"
                android:background="@null"
                android:cursorVisible="false"
                android:fontFamily="@font/tokens_normal"
                android:hint="@string/enter_item_location"
                android:importantForAutofill="no"
                android:inputType="text"
                android:padding="@dimen/padding_medium"
                android:textSize="@dimen/text_size_small" />

            <EditText
                android:id="@+id/et_item_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin_extra_small"
                android:background="@null"
                android:cursorVisible="false"
                android:fontFamily="@font/tokens_normal"
                android:hint="@string/enter_item_description"
                android:importantForAutofill="no"
                android:inputType="text"
                android:padding="@dimen/padding_medium"
                android:textSize="@dimen/text_size_small" />
        </LinearLayout>


        <TextView
            android:id="@+id/tv_item_add"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:fontFamily="@font/tokens_bold"
            android:padding="@dimen/padding_medium"
            android:text="@string/add"
            android:textSize="@dimen/text_size_small" />
    </LinearLayout>

</androidx.cardview.widget.CardView>